improved build config
Signed-off-by: Konstantin Läufer <klaeufer@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,12 @@ tasks.withType(JavaCompile) {
 tasks.withType(JavaExec) {
     jvmArgs << "-enableassertions"
 }
+
+run {
+    standardInput = System.in
+    standardOutput = System.out
+}
+
+googleJavaFormat {
+    toolVersion = '1.4'
+}
